5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1582_1332.log
== TEST (2019-03-12 17:34:52) 
-- CODE:
aresta =5
area = 3/2*(3aresta**0.5)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*(3aresta**0.5)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:04) 
-- CODE:
aresta =5
area = 3/2*(3*aresta**0.5)
 
print(round(area, 4))
-- OUTPUT:
10.0623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:35:14) 
-- CODE:
aresta =5
area = 3/2*(3*aresta**0.5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.168956
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
10.0623
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:35:50) 
-- CODE:
aresta =5
area = 3/2*(3**0.5*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:35:51) 
-- CODE:
aresta =5
area = 3/2*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.131703
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:19:21) 
-- CODE:
aresta =5
area = 3/2*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.185882
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
